<resources>
    <string name="app_name">CheckYourEnglish</string>
    <string name="nameLabel">Nick</string>
    <string-array name="types">
        <item>Choose</item>
        <item>Translate the word</item>
        <item>Complete the sentence</item>
    </string-array>
    <string name="letsPlay">Start</string>
    <string name="word">Word</string>
    <string name="translate">Type a word</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="back">Back to menu</string>
    <string name="wordDescription">Translate the word.</string>
    <string name="gramaDescription">Put the word in the correct form</string>
    <string name="answere">Answere</string>
    <string name="results">Results</string>
    <string name="chooseType">Choose type to check</string>
</resources>